tests/neg-custom-args/captures/constructor-uses.check
-- Error: tests/neg-custom-args/captures/constructor-uses.scala:13:4 ---------------------------------------------------
13 |    val u = f.toString // error
   |    ^
   |    Publicly visible constructor C uses external capabilities {A.this.f}.
   |    These dependencies need to be declared explicitly in a `uses_init ...` clause.
-- Error: tests/neg-custom-args/captures/constructor-uses.scala:17:12 --------------------------------------------------
17 |    val v = g.toString // error
   |            ^
   |            reference `A.this.g` is not included in the allowed capture set {A.this.f}
   |            of the enclosing constructor D in class D
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/constructor-uses.scala:28:21 -----------------------------
28 |  val _: () -> a.B = f // error
   |                     ^
   |                     Found:    (f : () ->{a.f²} a.B^{})
   |                     Required: () -> a.B
   |
   |                     Note that capability `f` is not included in capture set {}.
   |
   |                     where:    f  is a value in method test
   |                               f² is a value in class A
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/constructor-uses.scala:35:19 -----------------------------
35 |  val _: () -> C = g // error
   |                   ^
   |                   Found:    (g : () ->{c} C^{})
   |                   Required: () -> C
   |
   |                   Note that capability `g` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
